# templates

./: README.md
cpp/: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  init.sh
cpp/src/: main.cpp
cpp/tests/: main.cpp
